<resources>
    <string name="app_name">gitHubApiFilterCourotines</string>
    <string name="menu_filter_text_filter">Filtrar</string>
    <string name="menu_filter_text_name">Por Nome</string>
    <string name="menu_filter_text_star">Por Estrelas</string>
    <string name="menu_filter_star_count">Adiciona Soldado</string>
    <string name="menu_filter_text_addition">Adicionar</string>
    <string name="menu_filter_multiple">Multiplicar</string>
</resources>
